workloads/bookinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookinfo-ingress
  namespace: bookinfo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app.kubernetes.io/name: bookinfo-ingress
    app.kubernetes.io/part-of: bookinfo
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /productpage(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: productpage
                port:
                  number: 9080
          - path: /static(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: productpage
                port:
                  number: 9080
          - path: /login(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: productpage
                port:
                  number: 9080
          - path: /logout(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: productpage
                port:
                  number: 9080
          - path: /api/v1/products(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: productpage
                port:
                  number: 9080
